--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <nav class="navbar navbar-expand-lg navbar-dark bg-dark cabeza">
     <div class="container-fluid cabeza">
       <a class="navbar-brand logo" href="#">
-        <img src="logo universal.png" alt="Logo" width="60" height="48" class="d-inline-block align-text-top">
+        <img src="D:\PHP CURSO\VSC\tp integrador\imgs\logo universal.png" alt="Logo" width="60" height="48" class="d-inline-block align-text-top">
        <p class="logo">Un Chicago</p>
       </a>
       
@@ -39,16 +39,16 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="C1.webp" class="d-block w-100 carr" alt="un chicago">
+          <img src="D:\PHP CURSO\VSC\tp integrador\imgs\C1.webp" class="d-block w-100 carr" alt="un chicago">
         </div>
         <div class="carousel-item">
-          <img src="C2.png" class="d-block w-100 carr" alt="chicago med fire y pd">
+          <img src="D:\PHP CURSO\VSC\tp integrador\imgs\C2.png" class="d-block w-100 carr" alt="chicago med fire y pd">
         </div>
         <div class="carousel-item">
-          <img src="C3.webp" class="d-block w-100 carr" alt="actores con Dick Wolf">
+          <img src="D:\PHP CURSO\VSC\tp integrador\imgs\C3.webp" class="d-block w-100 carr" alt="actores con Dick Wolf">
         </div>
         <div class="carousel-item">
-          <img src="C4.jpg" class="d-block w-100 carr" alt="Productor ejecutivo, Dick Wolf">
+          <img src="D:\PHP CURSO\VSC\tp integrador\imgs\C4.jpg" class="d-block w-100 carr" alt="Productor ejecutivo, Dick Wolf">
         </div>
       </div>    
     </div>
@@ -74,7 +74,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card h-100">
-            <img src="CF.jpg" class="card-img-top series" alt="...">
+            <img src="D:\PHP CURSO\VSC\tp integrador\imgs\CF.jpg" class="card-img-top series" alt="...">
             <div class="card-body">
               <span class="badge text-bg-dark">Temporada 11</span>
               <span class="badge text-bg-info">Serie original</span>
@@ -85,7 +85,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="CM.png" class="card-img-top series" alt="...">
+            <img src="D:\PHP CURSO\VSC\tp integrador\imgs\CM.png" class="card-img-top series" alt="...">
             <div class="card-body">
               <span class="badge text-bg-dark">Temporada 8</span>
               <span class="badge text-bg-warning">Spin-off</span>
@@ -96,7 +96,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="CPD.png" class="card-img-top series" alt="...">
+            <img src="D:\PHP CURSO\VSC\tp integrador\imgs\CPD.png" class="card-img-top series" alt="...">
             <div class="card-body">
               <span class="badge text-bg-dark">Temporada 9</span>
               <span class="badge text-bg-warning">Spin-off</span>
@@ -109,7 +109,7 @@
     </div>
     <section class="row uplusss">
       <article class="col-6 upluss">
-        <img src="D:\PHP CURSO\VSC\tp integrador\u+.jpg" alt="universal plus uplus" width="100%" height="100%">
+        <img src="D:\PHP CURSO\VSC\tp integrador\imgs\u+.jpg" alt="universal plus uplus" width="100%" height="100%">
       </article>
       <article class="col-6 uplus">
        <h4> UNIVERSAL +</h4>
