actualizando el código para que tome bien las imágenes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <nav class="navbar navbar-expand-lg navbar-dark bg-dark cabeza">
     <div class="container-fluid cabeza">
       <a class="navbar-brand logo" href="#">
-        <img src="D:\PHP CURSO\VSC\tp integrador\imgs\logo universal.png" alt="Logo" width="60" height="48" class="d-inline-block align-text-top">
+        <img src="" alt="tp integrador\imgs\logo universal.png" width="60" height="48" class="d-inline-block align-text-top">
        <p class="logo">Un Chicago</p>
       </a>
       
@@ -114,7 +114,7 @@
       <article class="col-6 uplus">
        <h4> UNIVERSAL +</h4>
        <p> Con Universal + accedé a 5 señales premium HD con la mejor programación de estudios Universal. El pack también incluye acceso a la plataforma de streaming de Universal + para disfrutar cuándo y dónde quieras del mejor contenido On Demand. Podrás encontrar todo el universo de los héroes Dick Wolf (La Ley y el Orden - Un Chicago - FBI)</p>
-        <button type="button" class="btn btn-outline-light">Quiero saber más</button>
+       <a href="https://www.universalplus.com/"><button type="button" class="btn btn-outline-light">Quiero saber más</button></a> 
       </article>
     </section>
   </main>
