--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <nav class="navbar navbar-expand-lg navbar-dark bg-dark cabeza">
     <div class="container-fluid cabeza">
       <a class="navbar-brand logo" href="#">
-        <img src="" alt="tp integrador\imgs\logo universal.png" width="60" height="48" class="d-inline-block align-text-top">
+        <img src="tp integrador\imgs\logo universal.png" alt="logo universal" width="60" height="48" class="d-inline-block align-text-top">
        <p class="logo">Un Chicago</p>
       </a>
       
