--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="D:\PHP CURSO\VSC\tp_integrador\imgs\C1.webp" class="d-block w-100 carr" alt="un chicago">
+          <img src="C1.webp" class="d-block w-100 carr" alt="un chicago">
         </div>
         <div class="carousel-item">
           <img src="tp_integrador\imgs\C2.png" class="d-block w-100 carr" alt="chicago med fire y pd">
