--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="C1.webp" class="d-block w-100 carr" alt="un chicago">
+          <img src="https://github.com/BrianVallejoStark/TPintegradorFrontEnd/blob/master/C1.webp" class="d-block w-100 carr" alt="un chicago">
         </div>
         <div class="carousel-item">
-          <img src="tp_integrador\imgs\C2.png" class="d-block w-100 carr" alt="chicago med fire y pd">
+          <img src="D:\PHP CURSO\VSC\tp_integrador\imgs\C2.png" alt="chicago med fire y pd">
         </div>
         <div class="carousel-item">
-          <img src="tp_integrador\imgs\C3.webp" class="d-block w-100 carr" alt="actores con Dick Wolf">
+          <img src="tp_integrador\imgs\C3.webp" alt="actores con Dick Wolf">
         </div>
         <div class="carousel-item">
-          <img src="tp_integrador\imgs\C4.jpg" class="d-block w-100 carr" alt="Productor ejecutivo, Dick Wolf">
+          <img src="https://github.com/BrianVallejoStark/TPintegradorFrontEnd/blob/master/imgs/C4.jpg" alt="Productor ejecutivo, Dick Wolf">
         </div>
       </div>    
     </div>
