otra prueba de rutas

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card h-100">
-            <img src="tp_integrador\imgs\CF.jpg" class="card-img-top series" alt="Chicago Fire">
+            <img src="CF.jpg" class="card-img-top series" alt="Chicago Fire">
             <div class="card-body">
               <span class="badge text-bg-dark">Temporada 11</span>
               <span class="badge text-bg-info">Serie original</span>
@@ -85,7 +85,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="tp_integrador\imgs\CM.png" class="card-img-top series" alt="Chicago Med">
+            <img src="CM.png" class="card-img-top series" alt="Chicago Med">
             <div class="card-body">
               <span class="badge text-bg-dark">Temporada 8</span>
               <span class="badge text-bg-warning">Spin-off</span>
@@ -96,7 +96,7 @@
         </div>
         <div class="col">
           <div class="card h-100">
-            <img src="tp_integrador\imgs\CPD.png" class="card-img-top series" alt="Chicag PD">
+            <img src="CPD.png" class="card-img-top series" alt="Chicag PD">
             <div class="card-body">
               <span class="badge text-bg-dark">Temporada 9</span>
               <span class="badge text-bg-warning">Spin-off</span>
