se envian todas las imágenes a la carpeta raíz

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <nav class="navbar navbar-expand-lg navbar-dark bg-dark cabeza">
     <div class="container-fluid cabeza">
       <a class="navbar-brand logo" href="#">
-        <img src="tp integrador\imgs\logo universal.png" alt="logo universal" width="60" height="48" class="d-inline-block align-text-top">
+        <img src="logo universal.png" alt="logo universal" width="60" height="48" class="d-inline-block align-text-top">
        <p class="logo">Un Chicago</p>
       </a>
       
@@ -39,16 +39,16 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="https://github.com/BrianVallejoStark/TPintegradorFrontEnd/blob/master/C1.webp" class="d-block w-100 carr" alt="un chicago">
+          <img src="C1.webp" class="d-block w-100 carr" alt="un chicago">
         </div>
         <div class="carousel-item">
-          <img src="D:\PHP CURSO\VSC\tp_integrador\imgs\C2.png" alt="chicago med fire y pd">
+          <img src="C2.png" alt="chicago med fire y pd">
         </div>
         <div class="carousel-item">
-          <img src="tp_integrador\imgs\C3.webp" alt="actores con Dick Wolf">
+          <img src="C3.webp" alt="actores con Dick Wolf">
         </div>
         <div class="carousel-item">
-          <img src="https://github.com/BrianVallejoStark/TPintegradorFrontEnd/blob/master/imgs/C4.jpg" alt="Productor ejecutivo, Dick Wolf">
+          <img src="C4.jpg" alt="Productor ejecutivo, Dick Wolf">
         </div>
       </div>    
     </div>
@@ -109,7 +109,7 @@
     </div>
     <section class="row uplusss">
       <article class="col-6 upluss">
-        <img src="tp_integrador\imgs\u+.jpg" alt="universal plus uplus" width="100%" height="100%">
+        <img src="u+.jpg" alt="universal plus uplus" width="100%" height="100%">
       </article>
       <article class="col-6 uplus">
        <h4> UNIVERSAL +</h4>
