--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
           <img src="C1.webp" class="d-block w-100 carr" alt="un chicago">
         </div>
         <div class="carousel-item">
-          <img src="C2.png" alt="chicago med fire y pd">
+          <img src="C2.png" alt="chicago med fire y pd" class="d-block w-100 carr">
         </div>
         <div class="carousel-item">
-          <img src="C3.webp" alt="actores con Dick Wolf">
+          <img src="C3.webp" alt="actores con Dick Wolf" class="d-block w-100 carr"">
         </div>
         <div class="carousel-item">
-          <img src="C4.jpg" alt="Productor ejecutivo, Dick Wolf">
+          <img src="C4.jpg" alt="Productor ejecutivo, Dick Wolf" class="d-block w-100 carr">
         </div>
       </div>    
     </div>
