se agregaron links de enlace varios

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
       <div class="izq1" id="navbarText">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Dick Wolf</a>
+            <a class="nav-link active" aria-current="page" href="https://wolfentertainment.com/television/current/nightwatch/">Wolf Entertaiment</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Actores</a>
+            <a class="nav-link active" aria-current="page" href="https://es.wikipedia.org/wiki/Chicago_Fire_(serie_de_televisi%C3%B3n)#Personajes">Actores (Wikipedia)</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">La vida real</a>
+            <a class="nav-link active" aria-current="page" href="https://www.chicago.gov/city/en.html">La vida real</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link ver" href="#">Ver series</a>
+            <a class="nav-link ver" href="https://play.universalplus.com/search">Ver series</a>
           </li>
         </ul>
       </div>
@@ -57,8 +57,8 @@
       <p>
         Dick Wolf creó un universo de ficciones entrelazadas tomando como escenario principal la ciudad de Chicago. Conocido como la mente detrás de una de las series más longevas de la televisión, La ley y el orden (con más de 20 años en las pantallas), Wolf logró algo muy particular con esta saga: comenzó dentro de un departamento de bomberos para luego expandirse a una estación de policía y finalmente a un hospital.
       </p>
-      <button type="button" class="btn btn-outline-light">Saber más sobre el universo Dick Wolf</button>
-      <button type="button" class="btn btn-success vs">Ver series</button>
+      <a href="https://wolfentertainment.com/television/current/nightwatch/"><button type="button" class="btn btn-outline-light">Saber más sobre el universo Dick Wolf</button></a>
+      <a href="https://play.universalplus.com/search"><button type="button" class="btn btn-success vs">Ver series</button></a>
     </div>
   </header>
   <main>
@@ -127,7 +127,7 @@
         <strong>¿Qué serie de UN CHICAGO te gusta más?</strong> 
       </p>
     </div>
-    <form action="">
+    <form action="mailto:bvallejo@gra.utn.edu.ar">
       <div class="mb-3">
         <label for="exampleFormControlTextarea1" class="form-label logo">Tu también puedes formar <span class="comu"> parte de la comunidad </span>  Universal y los héroes Dick Wolf</label>
         <div class="row">
