--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
    <nav class="navbar navbar-expand-lg navbar-dark bg-dark cabeza">
     <div class="container-fluid cabeza">
-      <a class="navbar-brand logo" href="#">
+      <a class="navbar-brand logo" href="index.html">
         <img src="logo universal.png" alt="logo universal" width="60" height="48" class="d-inline-block align-text-top">
        <p class="logo">Un Chicago</p>
       </a>
@@ -151,19 +151,16 @@
   <nav class="navbar navbar-expand-lg bg-light navbar-dark final">
         <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">La ley y el orden</a>
+              <a class="nav-link active" aria-current="page" href="https://www.instagram.com/universaltvla/?hl=es">Síguenos en Instagram</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">FBI</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Un chicago</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Un chicago</a>
+              <a class="nav-link active" aria-current="page" href="https://www.universalplus.com/canales">Otras producciones de Universal</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Otras producciones de Universal</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Universal +</a>
+              <a class="nav-link active" aria-current="page" href="https://www.universalplus.com/">Universal +</a>
             </li>
         </ul>
   </nav>
