se cambi la forma de tomar .value del document.getElementById Se dejan algunos console.log para futuros controles

--- a/ver_series.html
+++ b/ver_series.html
@@ -104,7 +104,8 @@
           <label for="exampleFormControlInput1" class="form-label">Duración de la subscripción</label>
           <select class="form-select" aria-label="Default select example" id="plan" >
             <!--onchange="planes()"-->
-            <option value="1 meses" selected>1 mes</option>
+            <option value="0" selected></option>
+            <option value="1 meses">1 mes</option>
             <option value="3 meses">3 meses</option>
             <option value="6 meses">6 meses</option>
             <option value="12 meses">12 meses</option>
