--- a/ver_series.html
+++ b/ver_series.html
@@ -78,31 +78,31 @@
         <strong>Subscripción básica por dispositivo $550/mes</strong> 
       </p>
     </div>
-    <form action="mailto:bvallejo@gra.utn.edu.ar">
+    <form name="Subscripciones" action="index.php" method="post">
       <div class="mb-3">
         <div class="row">
           <div class="col">
-            <input type="text" class="form-control" placeholder="Nombres" aria-label="First name">
+            <input type="text" class="form-control" placeholder="Nombres" aria-label="First name" name="nombre">
           </div>
           <div class="col">
-            <input type="text" class="form-control" placeholder="Apellido" aria-label="Last name">
+            <input type="text" class="form-control" placeholder="Apellido" aria-label="Last name" name="apellido">
           </div>
         </div>
       </div>
       <div class="mb-3">
         <div class="col">
-          <input type="email" class="form-control" placeholder="Correo Electrónico (e-mail)" aria-label="email">
+          <input type="email" class="form-control" placeholder="Correo Electrónico (e-mail)" aria-label="email" name="mail">
         </div>
       </div>
       <div class="row">
         <div class="col">
           <label for="exampleFormControlInput1" class="form-label">Cantidad de dispositivos</label>
-          <input type="number" class="form-control" placeholder="Dispositivos" aria-label="Devices" id="devi" min="1" >
+          <input type="number" class="form-control" placeholder="Dispositivos" aria-label="Devices" id="devi" min="1" name="disp" >
           <!--onchange="planes()"-->
         </div>
         <div class="col">
           <label for="exampleFormControlInput1" class="form-label">Duración de la subscripción</label>
-          <select class="form-select" aria-label="Default select example" id="plan" >
+          <select class="form-select" aria-label="Default select example" id="plan" name="meses">
             <!--onchange="planes()"-->
             <option value="0" selected></option>
             <option value="1 meses">1 mes</option>
@@ -121,7 +121,7 @@
           <button type="reset" class="btn btn-primary vs cabeza logo form-control" onclick="limpiar()">Limpiar formulario</button>
         </div>
         <div class="col">
-          <button type="button" class="btn btn-primary vs cabeza logo form-control" onclick="planes()">Resumen de pago</button>
+          <button type="submit" class="btn btn-primary vs cabeza logo form-control" onclick="planes()">Resumen de pago</button>
         </div>
       </div>
     </form>
